Fix contents of the right sidebar appearing too high or too low on the page, compared to the main page body content.

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -405,6 +405,10 @@ ul#toc {
     @extend %left-col;
   }
 
+  &>h3, &>h4, &>h5, &>h6 {
+    clear: right;
+  }
+
   &>figure {
     margin-right: $examples-width + 5%;
     padding-block-end: 2rem;
